## BUG FIXES

- Fixed read bug in `GetMetadata`


# CHANGES in faosws VERSION 0.9.3

## BUG FIXES

- `GetMetadata` now uses the same terms for Metadata as `SaveData`


# CHANGES IN faosws VERSION 0.9.2

## MINOR CHANGES

- Removed unexported `curl` functions - this should prevent compatibility 
  issues with future versions

## BUG FIXES

- `PutRestCall` now returns server error message


# CHANGES IN faosws VERSION 0.9.1

## MINOR CHANGES

- Disallowed saving of missing values with non-missing flags (Fixes SWS-1411)
- Clarified for `SaveValidation` that Severity must be between 
  0 and 5 (inclusive)

## BUG FIXES

- `GetMetadata` now returns characters instead of factors
- `DtDimension` no longer allows missing id
- `GetHistory` now returns characters instead of factors
- Fixed error reporting when PUTting data to the SWS
- Fixed bug in `GetHistory` where it would not return data for datasets with 
  more than four keys
- Fixed bug in `SaveData` where data with incorrect columns wouldn't be rejected


# CHANGES IN faosws VERSION 0.9.0

## NEW FEATURES

- Added functions `ReadQualityIndicators` and `WriteQualityIndicators` to access
  the new metadata api

## MINOR CHANGES

- Saving denormalised data no longer allows saving of missing values 
  (Fixes SWS-1421, SWS-1527)

## BUG FIXES

- `SaveData` now correctly validates denormalised data


# CHANGES IN faosws VERSION 0.8.3

## NEW FEATURES

- Added new function `FetchDatatableNames`

## BUG FIXES

- `Dimension` now allows empty keys (Fixes SWS-1454)
- `GetCodeList` correctly validates dimension argument (Fixes SWS-1486)
- `SaveData` now handles empty pivoted data (Fixes SWS-1504)


# CHANGES IN faosws VERSION 0.8.2

## BUG FIXES

- `GetMetadata` now works where there is no metadata
- `GetData` now omits NA Values by default
- `GetMetadata` provides better error message when API gives truncated data
- `GetHistory` now works where there is no Value
- Fixed bug in `GetData` where it would fail if there was pivoting